examples/fail/semantic/missing_main.bina
// EXPECT_SEMANTIC_ERROR: function 'main' is not defined
fn helper() -> int {
    return 0;
}
